# hiermodelutils

./: README.md  pyproject.toml  setup.py
examples/: example_1.ipynb  mass_spring_damper.ipynb
hiermodelutils/: __init__.py  _datastructures.py  _flatten.py  _hierarchical_dataset.py  _hyperparam.py  _model.py  _param.py  _poly_basis.py  _ppl.py
src/hiermodelutils/: _distributions.py  _plotting.py  _ppl.py
test/: cases.py  test_flatten.py  test_hierarchical_dataset.py
