[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hiermodelutils"
dynamic = ["version"]
description = 'Data processing utilities for hierarchical modeling.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Wesley Holt", email = "wesleyjholt@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpyro",
    "equinox",
    "pandas",
    "seaborn"
]

[project.urls]
Documentation = "https://github.com/Wesley Holt/hiermodelutils#readme"
Issues = "https://github.com/Wesley Holt/hiermodelutils/issues"
Source = "https://github.com/Wesley Holt/hiermodelutils"

[tool.hatch.version]
path = "src/hiermodelutils/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hiermodelutils tests}"

[tool.coverage.run]
source_pkgs = ["hiermodelutils", "tests"]
branch = true
parallel = true
omit = [
  "src/hiermodelutils/__about__.py",
]

[tool.coverage.paths]
hiermodelutils = ["src/hiermodelutils", "*/hiermodelutils/src/hiermodelutils"]
tests = ["tests", "*/hiermodelutils/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
